--- a/src/templates/organisms/marquee.twig
+++ b/src/templates/organisms/marquee.twig
@@ -17,9 +17,9 @@
              <div class="swiper-slide slide1" style="background: url('assets/slides/slide1.jpg') 50% 50% no-repeat; background-size: cover;">
                 <div class="container clearfix">
                     <div class="slider-caption slider-caption-left">
-                        <img src="/assets/slides/slide-1-text.svg" alt="Changing Stayton one smile at a time" class="slide1-svg-text">
+                        <img src="/assets/slides/slide1-text.svg" alt="Downtown Raleighs Trusted Source of Dental Excellence. Now Welcoming New Patients!" class="slide1-svg-text">
                         <div class="flex-wrapper">
-                            <h5 class="text-byline">Now Welcoming<br>New Patients!</h5>
+                            {# <h5 class="text-byline">Now Welcoming<br>New Patients!</h5> #}
                             <a href="#" class="btn btn--style-two btn-slide-one" data-offset="98" data-scrollto="#section-specials">Learn More</a>
                         </div>
                     </div>
@@ -31,7 +31,7 @@
              <div class="swiper-slide slide2" style="background: url('assets/slides/slide2.jpg') 50% 50% no-repeat; background-size: cover;">
                 <div class="container clearfix">
                     <div class="slider-caption slider-caption-left">
-                        <img src="/assets/slides/slide2-text.svg" alt="The Right Dentist for your Family. Five Star Reviews. 'Loved my dental experience with Dr. Nelson and his staff! They made me feel welcome and more importantly, comfortable!' -Donna" class="slide__image">
+                        <img src="/assets/slides/slide2-text.svg" alt="" class="slide__image">
 
                         <div class="flex-wrapper">
                             <img src="/assets/slides/stars.png" alt="5 stars" class="stars">
