--- a/src/scss/molecules/_buttons.scss
+++ b/src/scss/molecules/_buttons.scss
@@ -22,14 +22,14 @@ button.btn {
 
   &.btn--style-two {
     background: none;
-    background-color: #fff;
-    color: #6fba11;
+    background-color: #6c54a3;
+    color: #fff;
     font-family: $ff-lato;
     // box-shadow: 0 3px #457613;
 
     &:hover,
     &:focus {
-      background-color: darken(#fff, 10%);
+      background-color: lighten(#6c54a3, 10%);
       // box-shadow: 0 3px #457613;
     }
   }
