:white_check_mark: QA Edits

--- a/src/index.twig
+++ b/src/index.twig
@@ -21,14 +21,14 @@
   ============================================= -->
   <div id="content" >
 
-        {# {% include 'molecules/cta__two-to-one.twig' with {
+        {% include 'molecules/cta__two-to-one.twig' with {
             id: 'cta-one',
             existingPatients: 'true'
-         } %} #}
+         } %}
 
         {% include 'organisms/about.twig' %}
 
-        {# {% include 'organisms/specials--three-card.twig' %}
+        {% include 'organisms/specials--three-card.twig' %}
 
         {% include 'molecules/cta__two-to-one.twig' with {
             id: 'cta-two'
@@ -38,9 +38,9 @@
 
         {% include 'organisms/services.twig' %}
 
-        {% include 'molecules/dentures.twig' %} #}
+        {% include 'molecules/dentures.twig' %}
 
-        {# <div class="cta " id="cta-three">
+        <div class="cta " id="cta-three">
             <div class="container center">
                 <div class="flex-wrapper">
                     <div class="cta__btn flex-wrapper__item">
@@ -63,7 +63,7 @@
 
         {% include 'organisms/location.twig' %}
 
-        {% include 'molecules/slab__care-credit.twig' %} #}
+        {% include 'molecules/slab__care-credit.twig' %}
 
     </div>
 
