--- a/src/scss/molecules/_location-card__simple.scss
+++ b/src/scss/molecules/_location-card__simple.scss
@@ -110,7 +110,7 @@
     @include font-size(18px, 18px, 17px, 16px, 16px);
 
     &:hover {
-      color: #000;
+      color: #7a7780;
       text-decoration: none;
     }
   }
