--- a/src/scss/organisms/_reviews.scss
+++ b/src/scss/organisms/_reviews.scss
@@ -1,6 +1,6 @@
 #section-reviews {
   background-color: #d2d5d2;
-  border-bottom: none;
+  border-bottom: 5px solid white;
 
   @media (min-width: 992px) {
     background-image: url('/assets/reviews.jpg');
