--- a/src/templates/organisms/marquee.twig
+++ b/src/templates/organisms/marquee.twig
@@ -19,8 +19,8 @@
                     <div class="slider-caption slider-caption-left">
                         <img src="/assets/slides/slide1-text.svg" alt="Downtown Raleighs Trusted Source of Dental Excellence. Now Welcoming New Patients!" class="slide1-svg-text">
                         <div class="flex-wrapper">
-                            {# <h5 class="text-byline">Now Welcoming<br>New Patients!</h5> #}
-                            <a href="#" class="btn btn--style-two btn-slide-one" data-offset="98" data-scrollto="#section-specials">Learn More</a>
+                            
+                            <a href="#" class="btn btn--style-two btn-slide-one" data-offset="98" data-scrollto="#section-specials">New Patient Offers</a>
                         </div>
                     </div>
                 </div>
@@ -31,11 +31,10 @@
              <div class="swiper-slide slide2" style="background: url('assets/slides/slide2.jpg') 50% 50% no-repeat; background-size: cover;">
                 <div class="container clearfix">
                     <div class="slider-caption slider-caption-left">
-                        <img src="/assets/slides/slide2-text.svg" alt="" class="slide__image">
+                        <img src="/assets/slides/slide2-text.svg" alt="Dr. Arrick and the team Smiles at Glenwood is Awesome and simply the nest for my family. -Anna R." class="slide__image">
 
                         <div class="flex-wrapper">
-                            <img src="/assets/slides/stars.png" alt="5 stars" class="stars">
-                            <a href="#" class="btn btn--style-two btn-slide-two" data-offset="98" data-scrollto="#section-reviews">Learn More</a>
+                            <a href="#" class="btn btn--style-two btn-slide-two" data-offset="98" data-scrollto="#section-reviews">Read More Reviews</a>
                         </div>
                     </div>
                 </div>
@@ -48,8 +47,8 @@
                     <div class="slider-caption slider-caption-left">
                         <img src="/assets/slides/slide3-text.svg" alt="No Insurance? Our Patients Don't Need It! Get your preventive care for a low monthly fee." class="slide__image">
 
+                            <h5 class="text-byline">Join the Smiles At Glenwood Membership Club and<br>get your preventive care for a low monthly fee</h5>
                         <div class="flex-wrapper">
-                            <h5 class="text-byline">Join our Membership Club and get your<br>preventive care for a low monthly fee</h5>
                             <a href="#" class="btn btn--style-two btn-slide-three" data-offset="98" data-scrollto="#section-insurance">Learn More</a>
                         </div>
                     </div>
