--- a/src/templates/organisms/services.twig
+++ b/src/templates/organisms/services.twig
@@ -52,7 +52,7 @@
 
             <div class="col-xs-12 col-md-6 card">
                 <img src="/assets/services/invisalign.jpg" alt="Invisalign Image" class="hidden-xs card__image--fix">
-                <img src="/assets/services/invisalign-mobile.jpg" alt="Smile Makeover Image" class="hidden-sm hidden-md hidden-lg">
+                <img src="/assets/services/invisalign-mobile.jpg" alt="Invisalign Image" class="hidden-sm hidden-md hidden-lg">
                 <div class="card__text hidden-xs col-sm-5">
                     <h3 class="feature__title">Invisalign®<br>Orthodontics</h3>
                     <p class="invisalign">These “invisible” aligners are the latest in orthodontic technology for adults and teens. Get the smile you've always wanted with Invisalign® Orthodontics.</p>
