--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -18,7 +18,7 @@
   #primary-menu > ul {
     margin-right: 0;
     border-right: none;
-    padding-right: 15px;
+    padding-right: 0;
 
     @include nav-color(#3c3c3c, 700);
     @include nav-color(#3c3c3c, 700, 1);
@@ -59,7 +59,7 @@
   }
 
   .logo-image-wrapper {
-    padding: 0 10px;
+    padding: 0 2px;
   }
 
   #logo img {
@@ -94,6 +94,7 @@
 
   @media (min-width: 992px) {
     :not(.static-sticky) #primary-menu {
+      width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
