--- a/src/scss/organisms/_marquee.scss
+++ b/src/scss/organisms/_marquee.scss
@@ -1,5 +1,5 @@
 #slider {
-  height: 36.45833vw !important;
+  height: 36vw !important;
 
   .swiper-slide {
     > img {
@@ -21,7 +21,7 @@
     margin-top: 15px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 
     > *:first-child {
       text-align: right;
@@ -67,8 +67,11 @@
     .text-byline {
       margin-bottom: 0;
       line-height: 1.3;
+      text-align: right;
+      color: #000;
+      padding-top: 10px;
 
-      @include font-size(18px, 18px, 16px, 16px, 16px);
+      @include font-size(22px, 22px, 26px, 26px, 26px);
     }
   }
 }
