--- a/src/templates/organisms/head.twig
+++ b/src/templates/organisms/head.twig
@@ -9,7 +9,7 @@
     <meta name="keywords" content="{{ keywords }}" />
     <link href="https://fonts.googleapis.com/css?family=family=Montserrat:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Unna:400,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
