:checkered_flag: Tyson Steele Round 1 Edits

--- a/src/templates/organisms/forms.twig
+++ b/src/templates/organisms/forms.twig
@@ -22,6 +22,6 @@
                 </div>
             </div>
         </div>
-        {# <p class="heading__copy">Adobe Acrobat is required to view forms. If you have trouble seeing the forms or need accommodation, please contact our office. <a href="https://get.adobe.com/reader/" class="adobe" target="_blank">Click here to download</a> the Acrobat software.</p> #}
+        <p class="heading__copy">Adobe Acrobat is required to view forms. If you have trouble seeing the forms or need accommodation, please contact our office. <a href="https://get.adobe.com/reader/" class="adobe" target="_blank">Click here to download</a> the Acrobat software.</p>
     </div>
 </section>
