--- a/src/templates/organisms/insurance.twig
+++ b/src/templates/organisms/insurance.twig
@@ -4,7 +4,7 @@
             <div class="hidden-sm hidden-md hidden-lg">
                 <h2 class="title title--mobile center">No Insurance?</h2>
                 <div class="row">
-                    <img src="/assets/insurance.jpg" alt="{{ mainDoctor }}'s happy patients" class="insurance__image mobile-insurance">
+                    <img src="/assets/insurance-mobile.jpg" alt="{{ mainDoctor }}'s happy patients" class="insurance__image mobile-insurance">
                 </div>
             </div>
             <div class="hidden-xs col-sm-7">
