--- a/src/templates/organisms/marquee.twig
+++ b/src/templates/organisms/marquee.twig
@@ -16,7 +16,7 @@
             ============================================= -->
              <div class="swiper-slide slide1" style="background: url('assets/slides/slide1.jpg') 50% 50% no-repeat; background-size: cover;">
                 <div class="container clearfix">
-                    <div class="slider-caption slider-caption-left">
+                    <div class="slider-caption slider-caption-left slide1-svg">
                         <img src="/assets/slides/slide1-text.svg" alt="Downtown Raleighs Trusted Source of Dental Excellence. Now Welcoming New Patients!" class="slide1-svg-text">
                         <div class="flex-wrapper">
                             
@@ -30,8 +30,8 @@
             ============================================= -->
              <div class="swiper-slide slide2" style="background: url('assets/slides/slide2.jpg') 50% 50% no-repeat; background-size: cover;">
                 <div class="container clearfix">
-                    <div class="slider-caption slider-caption-left">
-                        <img src="/assets/slides/slide2-text.svg" alt="Dr. Arrick and the team Smiles at Glenwood is Awesome and simply the nest for my family. -Anna R." class="slide__image">
+                    <div class="slider-caption slider-caption-left slide2-svg">
+                        <img src="/assets/slides/slide2-text.svg" alt="Dr. Arrick and the team Smiles at Glenwood is Awesome and simply the nest for my family. -Anna R." class="slide1-svg-text">
 
                         <div class="flex-wrapper">
                             <a href="#" class="btn btn--style-two btn-slide-two" data-offset="98" data-scrollto="#section-reviews">Read More Reviews</a>
