--- a/src/scss/organisms/_forms.scss
+++ b/src/scss/organisms/_forms.scss
@@ -4,7 +4,7 @@
   border-bottom: solid 2px #fff;
 
   .adobe {
-    color: #fff !important;
+    color: #6c54a3 !important;
     text-decoration: underline !important;
 
     @include link-color(#fff);
@@ -62,8 +62,11 @@
 
 .forms-btn {
   margin: 10px 0;
-  width: 275px;
   font-weight: 400;
+
+  @media (min-width: 400px) {
+    width: 275px;
+  }
 }
 
 .line-break {
