--- a/src/scss/organisms/_marquee.scss
+++ b/src/scss/organisms/_marquee.scss
@@ -36,11 +36,16 @@
   .slide1 {
     .btn-slide-one {
       padding: 10px 50px;
+      margin-right: 15px;
     }
 
     .text-byline {
       margin-bottom: 0;
       line-height: 1.3;
+    }
+
+    .slide1-svg {
+      width: 40%;
     }
   }
 
@@ -54,8 +59,8 @@
       line-height: 1.3;
     }
 
-    .stars {
-      padding-right: 15px;
+    .slide2-svg {
+      width: 50%;
     }
   }
 
