--- a/src/scss/organisms/_specials--three-card.scss
+++ b/src/scss/organisms/_specials--three-card.scss
@@ -18,7 +18,7 @@
       font-weight: 700;
       font-style: italic;
       font-family: $ff-unna;
-      // text-shadow: 2px 3px 11px #000;
+      text-shadow: 2px 3px 11px #000;
     }
 
     &__sub-title {
@@ -29,7 +29,7 @@
       // margin-bottom: 15px;
       padding-top: 0;
       padding-bottom: 5px;
-      // text-shadow: 2px 3px 11px #000;
+      text-shadow: 2px 3px 11px #000;
 
       @include font-size(24px, 22px, 20px, 20px, 16px);
     }
@@ -40,7 +40,7 @@
       margin-bottom: 0;
       font-family: $ff-mont;
       line-height: 1.3;
-      // text-shadow: 3px 3px 5px #000;
+      text-shadow: 3px 3px 5px #000;
 
       @include font-size(36px, 34px, 34px, 29px, 29px);
     }
@@ -156,7 +156,7 @@
 
     &:nth-child(1) {
       .specials-card__top {
-        background-color: rgba(64, 124, 204, 0.7);
+        background-color: rgba(64, 124, 204, 0.85);
       }
 
       .specials-card__cost {
@@ -170,7 +170,7 @@
 
     &:nth-child(2) {
       .specials-card__top {
-        background-color: rgba(188, 84, 95, 0.7);
+        background-color: rgba(188, 84, 95, 0.85);
       }
 
       .specials-card__cost {
@@ -184,7 +184,7 @@
 
     &:nth-child(3) {
       .specials-card__top {
-        background-color: rgba(150, 119, 218, 0.7);
+        background-color: rgba(150, 119, 218, 0.85);
       }
 
       .specials-card__cost {
