--- a/src/templates/molecules/social-media-links.twig
+++ b/src/templates/molecules/social-media-links.twig
@@ -8,9 +8,9 @@
 {#</div>#}
 
 <div class="social-media-links">
-    <a href="http://thescoutguide.com/raleigh-durham-chapel-hill/" target="_blank">
+    <span>
         <img src="/assets/scoutguide.png" class="custom-icon-scout" alt="social media link for scout guide">
-    </a>
+    </span>
     {% for item in socialMediaLinks %}
         <a href="{{ item.link }}" target="_blank" class="social-icon si-colored si-{{ item.media }}">
             <img src="/assets/{{ item.media }}.png" class="custom-icon-{{ item.media }}" alt="social media link for {{ item.media }}">
