--- a/src/templates/organisms/about.twig
+++ b/src/templates/organisms/about.twig
@@ -7,7 +7,7 @@
     <div class="video-slab">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-10 col-sm-push-1">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/SKqm7Nct1u8" allowfullscreen></iframe>
                 </div>
             </div>
@@ -16,17 +16,17 @@
 
     <div class="main container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-10 col-sm-push-1">
                 <h3 class="main__title">Candice T. Arrick, <span class="main__title-aboutDDS">DDS</span></h3>
                 
                 <p class="main__copy">Dr. Arrick was raised in Raleigh and graduated from Sanderson High School. She completed her BS in Biology at Hampton University, and received her dental degree from the University of North Carolina at Chapel Hill. Dr. Arrick is dedicated to staying abreast of the most up-to-date trends and techniques through countless hours of continuing education.</p>
                 <p class="main__copy">Giving back to the community is important to Dr. Arrick, and she has volunteered with the Missions of Mercy, Apex Free Dental Clinic, Wake Smiles, and at the Dental Clinic at the NC State Fair.</p>
                 <p class="main__copy">Dr. Arrick and her husband Collick have three lovely children, Caleb, Cara and Cameron.</p>
+                {% include 'molecules/associations__carousel.twig' %}
             </div>
         </div>
     </div>
     {# these are the icons on bottom #}
-    {% include 'molecules/associations__carousel.twig' %}
 
 </section>
 
