--- a/src/templates/organisms/header.twig
+++ b/src/templates/organisms/header.twig
@@ -23,7 +23,7 @@
                 <li><a href="#" data-offset="98" data-href="#section-specials">Special Offers</a></li>
                 <li><a href="#" data-offset="98" data-href="#section-reviews">Reviews</a></li>
                 <li><a href="#" data-offset="98" data-href="#section-insurance">No Insurance?</a></li>
-                <li><a href="#" data-offset="98" data-href="#section-about">Meet the Team</a></li>
+                <li><a href="#" data-offset="98" data-href="#section-about">Meet Dr. Arrick</a></li>
 
                 <li><a href="#" data-offset="98" data-href="#header">
                     <div class="logo-image-wrapper">
@@ -43,7 +43,7 @@
                 <li><a href="#" data-offset="98" data-href="#section-specials">Special Offers</a></li>
                 <li><a href="#" data-offset="98" data-href="#section-reviews">Reviews</a></li>
                 <li><a href="#" data-offset="98" data-href="#section-insurance">No Insurance?</a></li>
-                <li><a href="#" data-offset="98" data-href="#section-about">Meet the Team</a></li>
+                <li><a href="#" data-offset="98" data-href="#section-about">Meet Dr. Arrick</a></li>
                 <li><a href="#" data-offset="98" data-href="#section-services">Our Services</a></li>
                 <li><a href="#" data-offset="98" data-href="#section-forms">Forms</a></li>
                 <li><a href="#" data-offset="98" data-href="#section-care-credit-slab">Patient Financing</a></li>
