--- a/src/templates/organisms/head.twig
+++ b/src/templates/organisms/head.twig
@@ -7,7 +7,7 @@
     <title>{{ title }}</title>
     <meta name="description" content="{{ description }}"/>
     <meta name="keywords" content="{{ keywords }}" />
-    <link href="https://fonts.googleapis.com/css?family=family=Montserrat:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Unna:400,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
