--- a/src/templates/organisms/reviews.twig
+++ b/src/templates/organisms/reviews.twig
@@ -7,7 +7,7 @@
         <div class="col-xs-12 col-md-4 col-lg-6">
             <h2 class="heading">Patient Reviews</h2>
             <h5 class="reviews__byline">Over 500 5-star reviews! Find out why Raleigh loves to visit Smiles at Glenwood for their dentistry.</h5>
-            <div id="bf-revz-widget-{{ birdeye }}" style="-webkit-overflow-scrolling:touch;">
+            <div id="bf-revz-widget-{{ birdeye }}" class="bf-widget--wrapper">
             </div>
             <div class="row">
                 <div class="bf-dv"><span class="bf-spn">Reviews Powered by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span></div>
